--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,3 +1,15 @@
+%% Intro
+@book{patankar2020safety,
+  title={Safety Ethics: Cases from Aviation, Healthcare and Occupational and Environmental Health},
+  author={Patankar, M.S.},
+  isbn={9781000083002},
+  url={https://books.google.com.br/books?id=FO\_eDwAAQBAJ},
+  year={2020},
+  publisher={CRC Press}
+}
+
+
+%% AIS
 @inbook{AIS2014,
   author = {Aickelin, Uwe and Dasgupta, Dipankar and Gu, Feng},
   year = {2014},
@@ -146,3 +158,425 @@
   volume = {2723},
   doi = {10.1007/3-540-45105-6_25}
 }
+
+%%%%%% SAS
+@unknown{seams2018,
+  author = {Rodrigues, Arthur and Caldas, Ricardo and Rodrigues, Genaina and Vogel, Thomas and Pelliccione, Patrizio},
+  year = {2018},
+  month = {05},
+  pages = {},
+  title = {A Learning Approach to Enhance Assurances for Real-Time Self-Adaptive Systems},
+  doi = {10.1145/3194133.3194147}
+}
+
+@inproceedings{EngSAS2018,
+  author = {Weyns, Danny},
+  year = {2018},
+  month = {09},
+  pages = {1-2},
+  title = {Engineering Self-Adaptive Software Systems – An Organized Tour},
+  doi = {10.1109/FAS-W.2018.00012}
+}
+
+@inproceedings{SASResearchRoad2009,
+  author = {Cheng, Betty and Lemos, Rogério and Giese, Holger and Inverardi, Paola and Magee, Jeff and Andersson, Jesper and Becker, Basil and Bencomo, Nelly and Brun, Yuriy and Cukic, Bojan and Di Marzo Serugendo, Giovanna and Dustdar, Schahram and Finkelstein, Anthony and Gacek, Cristina and Geihs, Kurt and Grassi, Vincenzo and Karsai, Gabor and Kienle, Holger and Kramer, Jeff and Whittle, Jon},
+  year = {2009},
+  month = {01},
+  pages = {1-26},
+  title = {Software Engineering for Self-Adaptive Systems: A Research Roadmap},
+  volume = {5525},
+  isbn = {978-3-642-02160-2},
+  doi = {10.1007/978-3-642-02161-9_1}
+}
+
+@article{RainbowSASMapek2004,
+  author = {Garlan, David and Cheng, Shang-Wen and Huang, AC and Schmerl, Bradley and Steenkiste, Peter},
+  year = {2004},
+  month = {11},
+  pages = {46 - 54},
+  title = {Rainbow: Architecture-Based Self-Adaptation with reusable infrastructure},
+  volume = {37},
+  journal = {Computer},
+  doi = {10.1109/MC.2004.175}
+}
+
+@article{Weyns2016ModelBasedSA,
+  title={Model-Based Simulation at Runtime for Self-Adaptive Systems},
+  author={Danny Weyns and Muhammad Usman Iftikhar},
+  journal={2016 IEEE International Conference on Autonomic Computing (ICAC)},
+  year={2016},
+  pages={364-373}
+}
+
+@article{mapek2003,
+  author = {Kephart, Jeffrey and Chess, D.M.},
+  year = {2003},
+  month = {02},
+  pages = {41 - 50},
+  title = {The Vision Of Autonomic Computing},
+  volume = {36},
+  journal = {Computer},
+  doi = {10.1109/MC.2003.1160055}
+}
+
+%%%%%% Context
+
+@article{2010AliCGM,
+  author = {Ali, Raian and Dalpiaz, Fabiano and Giorgini, Paolo},
+  year = {2010},
+  month = {11},
+  pages = {},
+  title = {A Goal-based Framework for Contextual Requirements Modeling and Analysis},
+  volume = {15},
+  journal = {Requirements Engineering},
+  doi = {10.1007/s00766-010-0110-z}
+}
+
+@article{2001DeyContext,
+  author = {Dey, Anind K.},
+  title = {Understanding and Using Context},
+  year = {2001},
+  issue_DateType = {February 2001},
+  publisher = {Springer-Verlag},
+  address = {Berlin, Heidelberg},
+  volume = {5},
+  number = {1},
+  issn = {1617-4909},
+  url = {https://doi.org/10.1007/s007790170019},
+  doi = {10.1007/s007790170019},
+  abstract = {Context is a poorly used source of information in our computing environments. As a result, we have an impoverished understanding of what context is and how it can be used. In this paper, we provide an operational definition of context and discuss the different ways in which context can be used by context-aware applications. We also present the Context Toolkit, an architecture that supports the building of these context-aware applications. We discuss the features and abstractions in the toolkit that make the task of building applications easier. Finally, we introduce a new abstraction, a situation which we believe will provide additional support to application designers.},
+  journal = {Personal Ubiquitous Comput.},
+  month = {jan},
+  pages = {4–7},
+  numpages = {4}
+}
+
+@inbook{2003KrogstieMCommerce,
+  author = {Krogstie, John and Brandtzaeg, Petter and Heim, Jan and Opdahl, Andreas},
+  year = {2003},
+  month = {01},
+  pages = {},
+  title = {Usable M-Commerce Systems},
+  doi = {10.4018/9781591400523.ch009.ch000}
+}
+
+%%%%%% Uncertainty
+
+@article{2021UncertaintySASHezavehi,
+  author = {Hezavehi, Sara and Weyns, Danny and Avgeriou, Paris and Calinescu, Radu and Mirandola, Raffaela and Perez-Palacin, Diego},
+  year = {2020},
+  month = {12},
+  pages = {1-36},
+  title = {Uncertainty in Self-adaptive Systems: A Research Community Perspective},
+  volume = {15},
+  journal = {ACM Transactions on Autonomous and Adaptive Systems},
+  doi = {10.1145/3487921}
+}
+
+@inproceedings{2010SWEngInUncertainGarlan,
+  author = {Garlan, David},
+  title = {Software Engineering in an Uncertain World},
+  year = {2010},
+  isbn = {9781450304276},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  url = {https://doi.org/10.1145/1882362.1882389},
+  doi = {10.1145/1882362.1882389},
+  abstract = {In this paper, we argue that the reality of today's software systems requires us to consider uncertainty as a first-class concern in the design, implementation, and deployment of those systems. We further argue that this induces a paradigm shift, and a number of research challenges that must be addressed.},
+  booktitle = {Proceedings of the FSE/SDP Workshop on Future of Software Engineering Research},
+  pages = {125–128},
+  numpages = {4},
+  keywords = {software architecture, software design, software engineering, uncertainty},
+  location = {Santa Fe, New Mexico, USA},
+  series = {FoSER '10}
+}
+
+@inproceedings{2014UncertaintiesinSASPerez,
+  author = {Perez-Palacin, Diego and Mirandola, Raffaela},
+  title = {Uncertainties in the Modeling of Self-Adaptive Systems: A Taxonomy and an Example of Availability Evaluation},
+  year = {2014},
+  isbn = {9781450327336},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  url = {https://doi.org/10.1145/2568088.2568095},
+  doi = {10.1145/2568088.2568095},
+  abstract = {The complexity of modern software systems has grown enormously in the past years with users always demanding for new features and better quality of service. Besides, software is often embedded in dynamic contexts, where requirements, environment assumptions, and usage profiles continuously change. As an answer to this need, it has been proposed the usage of self-adaptive systems. Self-adaptation endows a system with the capability to accommoDateType its execution to different contexts in order to achieve continuous satisfaction of requirements. Often, self-adaptation process also makes use of runtime model evaluations to decide the changes in the system. However, even at runtime, context information that can be managed by the system is not complete or accurate; i.e, it is still subject to some uncertainties. This work motivates the need for the consideration of the concept of uncertainty in the model-based evaluation as a primary actor, classifies the avowed uncertainties of self-adaptive systems, and illustrates examples of how different types of uncertainties are present in the modeling of system characteristics for availability requirement satisfaction.},
+  booktitle = {Proceedings of the 5th ACM/SPEC International Conference on Performance Engineering},
+  pages = {3–14},
+  numpages = {12},
+  keywords = {uncertainty, sef-adaptive software, models},
+  location = {Dublin, Ireland},
+  series = {ICPE '14}
+}
+
+%%%%%% Assurances
+
+@article{2019PerpetualAssurancesWeyns,
+  doi = {10.48550/ARXIV.1903.04771},
+  
+  url = {https://arxiv.org/abs/1903.04771},
+  
+  author = {Weyns, Danny and Bencomo, Nelly and Calinescu, Radu and Cámara, Javier and Ghezzi, Carlo and Grassi, Vincenzo and Grunske, Lars and Inverardi, Paola and Jézéquel, Jean-Marc and Malek, Sam and Mirandola, Raffaela and Mori, Marco and Tamburrelli, Giordano},
+  
+  keywords = {Software Engineering (cs.SE), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  
+  title = {Perpetual Assurances for Self-Adaptive Systems},
+  
+  publisher = {arXiv},
+  
+  year = {2019},
+  
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+@inbook{assurances2017,
+  author = {Lemos, Rogério and Garlan, David and Ghezzi, Carlo and Giese, Holger and Andersson, Jesper and Litoiu, Marin and Schmerl, Bradley and Weyns, Danny and Baresi, Luciano and Bencomo, Nelly and Brun, Yuriy and Cámara, Javier and Calinescu, Radu and Cohen, Myra and Gorla, Alessandra and Grassi, Vincenzo and Grunske, Lars and Inverardi, Paola and Jézéquel, Jean-Marc and Zambonelli, Franco},
+  year = {2017},
+  month = {09},
+  pages = {1-29},
+  title = {Software Engineering for Self-Adaptive Systems: Research Challenges in the Provision of Assurances},
+  isbn = {978-3-319-74182-6},
+  doi = {10.1007/978-3-319-74183-3_1}
+}
+
+%%%%%%  GORE
+@ARTICLE{Horkoff2019,
+  author = {Horkoff, Jennifer and Aydemir, Fatma and Cardoso, Evellin and Li, Tong and Maté, Alejandro and Paja, Elda and Salnitri, Mattia and Piras, Luca and Mylopoulos, John and Giorgini, Paolo},
+  year = {2019},
+  month = {06},
+  pages = {},
+  title = {Goal-oriented requirements engineering: an extended systematic mapping study},
+  volume = {24},
+  journal = {Requirements Engineering},
+  doi = {10.1007/s00766-017-0280-z}
+}
+
+
+@ARTICLE{ElSayed2017430,
+	author = {Elsayed, Iman and Ezz, Zeinab and Nasr, Eman},
+  year = {2017},
+  month = {09},
+  pages = {430-439},
+  title = {Goal Modeling Techniques in Requirements Engineering: A Systematic Literature Review},
+  volume = {13},
+  journal = {Journal of Computer Science},
+  doi = {10.3844/jcssp.2017.430.439}
+}
+
+@ARTICLE{Tropos2004203,
+	author = {Bresciani, Paolo and Perini, Anna and Giorgini, Paolo and Giunchiglia, Fausto and Mylopoulos, John},
+	title = {Tropos: An agent-oriented software development methodology},
+	year = {2004},
+	journal = {Autonomous Agents and Multi-Agent Systems},
+	volume = {8},
+	number = {3},
+	pages = {203 – 236},
+	doi = {10.1023/B:AGNT.0000018806.20944.ef},
+	url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-3142750497&doi=10.1023%2fB%3aAGNT.0000018806.20944.ef&partnerID=40&md5=5c0eeebd086484e31969cac6ae3a5e6c},
+	type = {Article},
+	publication_stage = {Final},
+	source = {Scopus},
+	note = {Cited by: 1265; All Open Access, Green Open Access}
+}
+
+@inproceedings{2001Lamsweerde,
+  author = {Lamsweerde, Axel},
+  year = {2001},
+  month = {02},
+  pages = {249-262},
+  title = {Goal-Oriented Requirements Engineering: A Guided Tour},
+  isbn = {0-7695-1125-2},
+  journal = {Proceedings of the IEEE International Conference on Requirements Engineering},
+  doi = {10.1109/ISRE.2001.948567}
+}
+
+@article{van_lamsweerde_system_2003,
+	title = {From system goals to software architecture},
+	journal = {Formal Methods for Software Architectures},
+	author = {Van Lamsweerde, Axel},
+	year = {2003},
+	pages = {25--43}
+}
+
+@article{ali_goal_based_2010,
+	title = {A goal-based framework for contextual requirements modeling and analysis},
+	volume = {15},
+	number = {4},
+	journal = {Requirements Engineering},
+	author = {Ali, Raian and Dalpiaz, Fabiano and Giorgini, Paolo},
+	year = {2010},
+	pages = {439--458}
+}
+
+@article{deloach_capabilities_based_2008,
+  author = {Deloach, Scott and Oyenan, Walamitien and Matson, Eric},
+  year = {2008},
+  month = {02},
+  pages = {13-56},
+  title = {A capabilities-based model for adaptive organizations},
+  volume = {16},
+  journal = {Autonomous Agents and Multi-Agent Systems},
+  doi = {10.1007/s10458-007-9019-4}
+}
+
+@article{bresciani_tropos_2004,
+	title = {Tropos: {An} agent-oriented software development methodology},
+	volume = {8},
+	shorttitle = {Tropos},
+	number = {3},
+	journal = {Autonomous Agents and Multi-Agent Systems},
+	author = {Bresciani, Paolo and Perini, Anna and Giorgini, Paolo and Giunchiglia, Fausto and Mylopoulos, John},
+	year = {2004},
+	pages = {203--236},
+	file = {jaamas04.pdf:C\:\\Users\\jpaul\\Zotero\\storage\\BPTU6KQ7\\jaamas04.pdf:application/pdf}
+}
+
+@ARTICLE{2015PropertySpecCatalog,  
+  author={Autili, Marco and Grunske, Lars and Lumpe, Markus and Pelliccione, Patrizio and Tang, Antony},  
+  journal={IEEE Transactions on Software Engineering},   
+  title={Aligning Qualitative, Real-Time, and Probabilistic Property Specification Patterns Using a Structured English Grammar},   
+  year={2015},  
+  volume={41},  
+  number={7},  
+  pages={620-638},  
+  doi={10.1109/TSE.2015.2398877}
+}
+
+@inproceedings{UPPAAL,
+  author = {Bengtsson, Johan and Larsen, Kim and Larsson, Fredrik and Pettersson, Paul and yi, Wang},
+  year = {1995},
+  month = {01},
+  pages = {232-243},
+  title = {UPPAAL - a Tool Suite for Automatic Verification of Real-Time Systems.},
+  volume = {3},
+  journal = {BRICS Report Series},
+  doi = {10.7146/brics.v3i58.18769}
+}
+
+@article{1996TCTL,
+  author = {Henzinger, Thomas and Nicollin, Xavier and Sifakis, Joseph and Yovine, Sergio and Lavoisier, Miniparc-zirst},
+  year = {1996},
+  month = {08},
+  pages = {},
+  title = {Symbolic Model Checking for Real-Time Systems},
+  volume = {111},
+  journal = {Information and Computation},
+  doi = {10.1006/inco.1994.1045}
+}
+
+@book{2008PrinciplesModelChecking,
+author = {Baier, Christel and Katoen, Joost-Pieter},
+year = {2008},
+month = {01},
+pages = {},
+title = {Principles of Model Checking},
+volume = {26202649},
+isbn = {978-0-262-02649-9}
+}
+
+@inproceedings{1999Observers,
+author = {Havelund, Klaus and Larsen, Kim and Skou, Arne},
+year = {1999},
+month = {05},
+pages = {277-298},
+title = {Formal Verification of a Power Controller Using the Real-Time Model Checker UPPAAL},
+volume = {1601},
+isbn = {978-3-540-66010-1},
+journal = {ARTS},
+doi = {10.1007/3-540-48778-6_17}
+}
+
+@InProceedings{1998ReachabilityObs,
+author="Aceto, Luca
+and Burgue{\~{n}}o, Augusto
+and Larsen, Kim G.",
+editor="Steffen, Bernhard",
+title="Model checking via reachability testing for timed automata",
+booktitle="Tools and Algorithms for the Construction and Analysis of Systems",
+year="1998",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="263--280",
+abstract="In this paper we develop an approach to model-checking for timed automata via reachability testing. As our specification formalism, we consider a dense-time property language with clocks. This property language may be used to express safety and bounded liveness properties of real-time systems. We show how to automatically synthesize, for every formula ϕ, a test automaton Tϕ in such a way that checking whether a system S satisfies the property ϕ can be reduced to a reachability question over the system obtained by making Tϕ interact with S.",
+isbn="978-3-540-69753-4"
+}
+
+@misc{2022PSP,
+  author = {Carwehl, Marc and Vogel, Thomas and Rodrigues, Genaina and Grunske, Lars},
+  title = {Property Specification Patterns for UPPAAL},
+  year = {2022},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/hub-se/PSP-UPPAAL}}
+}
+
+@misc{Modelica,
+  title = {Modelica Language},
+  howpublished = {\url{https://modelica.org/modelicalanguage.html}},
+  note = {Accessed: 2022-10-27}
+}
+
+@unknown{ModelicaSpecs,
+author = {Fritzson, Peter and Olsson, Hans and Otter, Martin},
+year = {2007},
+month = {09},
+pages = {},
+title = {Modelica - A Unified Object-Oriented Language for Physical Systems Modeling, Language Specification}
+}
+
+@misc{OpenModelica,
+  title = {Open Modelica},
+  howpublished = {\url{https://openmodelica.org/}},
+  note = {Accessed: 2022-10-27}
+}
+
+@inproceedings{OpenModelicaIM,
+author = {Fritzson, Peter and Pop, Adrian and Asghar, Adeel and Bachmann, Bernhard and Braun, Willi and Braun, Robert and Rogovchenko-Buffoni, Lena and Casella, Francesco and Castro, Rodrigo and Danós, Alejandro and Franke, Rüdiger and Gebremedhin, Mahder and Lie, Bernt and Mengist, Alachew and Moudgalya, Kannan and Ochel, Lennart and Palanisamy, Arunkumar and Schamai, Wladimir and Sjölund, Martin and Ostlund, Per},
+year = {2018},
+month = {10},
+pages = {},
+title = {The OpenModelica Integrated Modeling, Simulation and Optimization Environment},
+doi = {10.3384/ECP18154206}
+}
+
+
+%% CPS
+@article{2014PerceptionsSOTAV&VCPS,
+author = {Zheng, Xi and Julien, Christine and Kim, Miryung and Khurshid, Sarfraz},
+year = {2015},
+month = {11},
+pages = {1-14},
+title = {Perceptions on the State of the Art in Verification and Validation in Cyber-Physical Systems},
+volume = {PP},
+journal = {IEEE Systems Journal},
+doi = {10.1109/JSYST.2015.2496293}
+}
+
+@article{Baheti2019CyberPhysicalS,
+  title={Cyber-Physical Systems},
+  author={Radhakisan Sohanlal Baheti and Helen Gill},
+  journal={2019 IEEE International Conference on Mechatronics (ICM)},
+  year={2019}
+}
+
+@article{gao2015survey,
+  title={A survey of fault diagnosis and fault-tolerant techniques—Part I: Fault diagnosis with model-based and signal-based approaches},
+  author={Gao, Zhiwei and Cecati, Carlo and Ding, Steven X},
+  journal={IEEE transactions on industrial electronics},
+  volume={62},
+  number={6},
+  pages={3757--3767},
+  year={2015},
+  publisher={IEEE}
+}
+
+% BSN
+@INPROCEEDINGS{2021BSN,
+  author={Gil, Eric Bernd and Caldas, Ricardo and Rodrigues, Arthur and da Silva, Gabriel Levi Gomes and Rodrigues, Genaína Nunes and Pelliccione, Patrizio},
+  booktitle={2021 International Symposium on Software Engineering for Adaptive and Self-Managing Systems (SEAMS)}, 
+  title={Body Sensor Network: A Self-Adaptive System Exemplar in the Healthcare Domain}, 
+  year={2021},
+  volume={},
+  number={},
+  pages={224-230},
+  doi={10.1109/SEAMS51251.2021.00037}}
