--- a/tex/5_Evaluation.tex
+++ b/tex/5_Evaluation.tex
@@ -1,61 +1,65 @@
+This research is intended to last for twenty four months, starting in the beginning of 2021 and fininshing in the end of the following year. All the work was divided in twelve tasks that ranges from the formalization of the research approach until the submission of an article and the defense of the thesis. For a better planning, the tasks were clustered into five major blocks to be performed sequentially. 
 
-\subsubsection{Initial effort (months 1-3)}
+Table \ref{tab:schedule} shows when each task is intended to be performed throughout the available time. The thesis will be written accross the entire period, whilst the literature will be reviewed at least at every three months, so that the work might be always up to date with the state-of-the-art. The last few months will be devoted to writting a paper for the validadion of the community.
+
+
+\subsubsection{Initial effort (months 1-6)}
 \begin{itemize}
 \item \textbf{T1:} Thesis writing;
-\item \textbf{T2:} Literature review update;
+\item \textbf{T2:} Literature review;
 \item \textbf{T3:} Approach formalization (terms, tools, process, methods, quality/assurance)
 \end{itemize}
 
-\subsubsection{Development (months 4 and 5)}
+\subsubsection{Development (months 7-12)}
 \begin{itemize}
 	\item \textbf{T1:} Thesis writing;
+	\item \textbf{T2:} Literature review (update);
 	\item \textbf{T4:} Method implementation;
-	\item \textbf{T5:} Experimental setup and experimentation in toy system
 \end{itemize}
 
-\subsubsection{BSN case study (months 6-9)}
+\subsubsection{BSN case study (months 13-15)}
 \begin{itemize}
 	\item \textbf{T1:} Thesis writing;
-	\item \textbf{T2:} Literature review update;
-	\item \textbf{T6:} Analyze lessons learned from proof of concept;
-	\item \textbf{T7:} Experimental setup and experimentation in BSN;
-	\item \textbf{T8:} Writing review (feedback from experiments)
+	\item \textbf{T2:} Literature review (update);
+	\item \textbf{T5:} Experimental setup and implementation of the BSN prototype;
 \end{itemize}
 
-\subsubsection{Evaluation (months 10-12)}
+\subsubsection{Evaluation (months 16-19)}
 \begin{itemize}
 	\item \textbf{T1:} Thesis writing;
-	\item \textbf{T2:} Literature review update;
-	\item \textbf{T8:} Writing review (feedback from experiments);
-	\item \textbf{T9:} Analyze and report results
+	\item \textbf{T2:} Literature review (update);
+	\item \textbf{T6:} Negative Selection Algorithm Implementation;
+	\item \textbf{T7:} Writing review (feedback from experiments);
+	\item \textbf{T8:} Analyze and report results
 \end{itemize}
 
-\subsubsection{Publications (months 12-24)}
+\subsubsection{Publications (months 20-24)}
 \begin{itemize}
-	\item \textbf{T10:} Article writing;
-	\item \textbf{T11:} Article submission (possible venues: TAAS, SEAMS, IST, IEEE Transactions, JSS);
-	\item \textbf{T12:} Article revision;
-	\item \textbf{T13:} Thesis defense
+	\item \textbf{T1:} Thesis writing;
+	\item \textbf{T8:} Analyze and report results
+	\item \textbf{T9:} Article writing;
+	\item \textbf{T10:} Article submission (possible venues: TAAS, SEAMS, IST, IEEE Transactions, JSS);
+	\item \textbf{T11:} Article revision;
+	\item \textbf{T12:} Thesis defense
 	
 \end{itemize}
 
-% \begin{table}[!h]
-% 	\begin{tabular}{c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c}
-% 		\multicolumn{1}{l|}{task / month} & \textbf{1} & \textbf{2} & \textbf{3} & \textbf{4} & \textbf{5} & \textbf{6} & \textbf{7} & \textbf{8} & \textbf{9} & \textbf{10} & \textbf{11} & \textbf{12} & \textbf{13-17} & \textbf{19-27} & \textbf{28} \\ \hline
-% 		\textbf{T1} & \textbf{\textbf{\checkmark}} & \textbf{\checkmark} & \textbf{\checkmark} & \textbf{\checkmark} & \textbf{\checkmark} & \textbf{\checkmark} & \textbf{\checkmark} & \textbf{\checkmark} & \textbf{\checkmark} & \textbf{\checkmark} & \textbf{\checkmark} & \textbf{\checkmark} &  &  & \\ \hline
-% 		\textbf{T2} &  &  & \textbf{\checkmark} &  &  &  &  &  & \textbf{\checkmark} &  &  & \textbf{\checkmark} &  &  & \\ \hline
-% 		\textbf{T3} & \textbf{\checkmark} & \textbf{\checkmark} & \textbf{\checkmark} &  &  &  &  &  &  &  &  &  &  &  & \\ \hline
-% 		\textbf{T4} &  &  &  & \textbf{\checkmark} & \textbf{\checkmark} &  &  &  &  &  &  &  &  &  & \\ \hline
-% 		\textbf{T5} &  &  &  &  & \textbf{\checkmark} &  &  &  &  &  &  &  &  &  & \\ \hline
-% 		\textbf{T6} &  &  &  &  &  & \textbf{\checkmark} &  &  &  &  &  &  &  &  & \\ \hline
-% 		\textbf{T7} &  &  &  &  &  & \textbf{\checkmark} & \textbf{\checkmark} & \textbf{\checkmark} &  &  &  &  &  &  & \\ \hline
-% 		\textbf{T8} &  &  &  &  &  &  &  & \textbf{\checkmark} &  &  &  &  &  &  & \\ \hline
-% 		\textbf{T9} &  &  &  &  &  &  &  &  &  & \textbf{\checkmark} & \textbf{\checkmark} &  &  &  & \\ \hline
-% 		\textbf{T10} &  &  &  &  &  &  &  &  &  &  &  &  & \textbf{\checkmark} &  & \\ \hline
-% 		\textbf{T11} &  &  &  &  &  &  &  &  &  &  &  &  & \textbf{\checkmark} &  & \\ \hline
-% 		\textbf{T12} &  &  &  &  &  &  &  &  &  &  &  &  &  & \textbf{\checkmark} & \\ \hline
-% 		\textbf{T13} &  &  &  &  &  &  &  &  &  &  &  &  &  &  & \textbf{\checkmark}\\
-% 	\end{tabular}
-% 	\caption{Work plan for 2020-2021}
-% 	\label{tab:schedule}
-% \end{table}
+\begin{table}[!h]
+	\begin{tabular}{c|c|c|c|c|c|c|c|c|c|c|c}
+	\multicolumn{1}{l|}{task / month} & \textbf{1-6}                       & \textbf{7-8}                       & \textbf{9-12}                      & \textbf{13}                        & \textbf{14-15}                     & \textbf{16}                        & \textbf{17-19}                     & \textbf{20-21}                     & \textbf{22}                        & \textbf{23}                        & \textbf{24}                        \\ \hline
+	\textbf{T1}      & \textbf{\checkmark} & \textbf{\checkmark} & \textbf{\checkmark} & \textbf{\checkmark} & \textbf{\checkmark} & \textbf{\checkmark} & \textbf{\checkmark} & \textbf{\checkmark} & \textbf{\checkmark} & \textbf{\checkmark} & \textbf{\checkmark} \\ \hline
+	\textbf{T2}      & \textbf{\checkmark} & \textbf{\checkmark} &                                                     & \textbf{\checkmark} &                                                     & \textbf{\checkmark} &                                                     &                                                     &                                                     &                                                     &                                                     \\ \hline
+	\textbf{T3}      & \textbf{\checkmark} &                                                     &                                                     &                                                     &                                                     &                                                     &                                                     &                                                     &                                                     &                                                     &                                                     \\ \hline
+	\textbf{T4}      &                                                     &                                                     & \textbf{\checkmark} &                                                     &                                                     &                                                     &                                                     &                                                     &                                                     &                                                     &                                                     \\ \hline
+	\textbf{T5}      &                                                     &                                                     &                                                     &                                                     & \textbf{\checkmark} &                                                     &                                                     &                                                     &                                                     &                                                     &                                                     \\ \hline
+	\textbf{T6}      &                                                     &                                                     &                                                     &                                                     &                                                     &                                                     & \textbf{\checkmark} &                                                     &                                                     &                                                     &                                                     \\ \hline
+	\textbf{T7}      &                                                     &                                                     &                                                     &                                                     &                                                     &                                                     & \textbf{\checkmark} & \textbf{\checkmark} &                                                     &                                                     &                                                     \\ \hline
+	\textbf{T8}      &                                                     &                                                     &                                                     &                                                     &                                                     &                                                     & \textbf{\checkmark} & \textbf{\checkmark} &                                                     &                                                     &                                                     \\ \hline
+	\textbf{T9}      &                                                     &                                                     &                                                     &                                                     &                                                     &                                                     &                                                     &                                                     & \textbf{\checkmark} &                                                     &                                                     \\ \hline
+	\textbf{T10}     &                                                     &                                                     &                                                     &                                                     &                                                     &                                                     &                                                     &                                                     & \textbf{\checkmark} &                                                     &                                                     \\ \hline
+	\textbf{T11}     &                                                     &                                                     &                                                     &                                                     &                                                     &                                                     &                                                     &                                                     &                                                     & \textbf{\checkmark} &                                                     \\ \hline
+	\textbf{T12}     &                                                     &                                                     &                                                     &                                                     &                                                     &                                                     &                                                     &                                                     &                                                     &                                                     & \textbf{\checkmark}
+	\end{tabular}
+	\caption{Work plan for 2021-2022}
+	\label{tab:schedule}
+\end{table}
